# hyperaccel-logging-tutorial

./: .gitignore  CMakeLists.txt  main.py  pyproject.toml  setup.py
clib/: CMakeLists.txt
clib/book/: CMakeLists.txt
clib/book/csrc/: binding.cpp  book.cpp
clib/book/include/: book.hpp
clib/calculator/: CMakeLists.txt
clib/calculator/csrc/: binding.cpp  calculator.cpp
clib/calculator/include/: calculator.hpp
clib/logger/: CMakeLists.txt
clib/logger/csrc/: logger.cpp
clib/logger/include/: logger.hpp
ha_hello/: __init__.py  ha_hello.py
tests/cpp/: CMakeLists.txt  test_calculator.cpp
tests/python/: test_book.py  test_calculator.py  test_ha_hello.py
